# CNI_ATLAS

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt
cni/: __init__.py  __main__.py  ask_output.txt
cni/analysis/: explainer.py  flow_tracer.py  health.py  impact.py  onboarder.py  path_finder.py
cni/analyzer/: repo_scanner.py
cni/cli/: main.py
cni/graph/: dependency_graph.py  export.py  graph_builder.py
cni/llm/: llm_client.py
cni/retrieval/: context_builder.py  semantic_search.py
cni/server/: __init__.py  app.py  state.py
cni/server/frontend/: next.config.js  package-lock.json  package.json  tailwind.config.js
cni/server/frontend/app/: client-layout.jsx  globals.css  layout.jsx  page.jsx
cni/server/frontend/components/: ChatPanel.jsx  CommandPalette.jsx  ErrorMessage.jsx  GraphChat.jsx  GraphView.jsx  HealthDashboard.jsx  ImpactPanel.jsx  LoadingSkeleton.jsx  NotAnalyzed.jsx  OnboardPanel.jsx  Sidebar.jsx  StatsBar.jsx  TimelineChart.jsx
cni/server/routes/: __init__.py  analyze.py  ask.py  bookmarks.py  chat_history.py  explain.py  graph.py  health.py  history.py  impact.py  onboard.py  path.py  search.py
cni/storage/: cache.py  history.py
cni/utils/: errors.py  platform.py
docs/: generate_demo.py
scripts/: build_frontend.ps1  build_frontend.sh  dev.ps1  dev.sh  test_external.py  validate.py
tests/: conftest.py  test_cli.py  test_context_builder.py  test_explainer.py  test_flow_tracer.py  test_graph_builder.py  test_health.py  test_impact.py  test_path_finder.py  test_repo_scanner.py
(+12 files in other folders)
