[project]
name = "cni"
version = "0.1.0"
description = "Codebase Neural Interface — explore and query any codebase"
requires-python = ">=3.10"

dependencies = [
    "typer",
    "networkx",
    "matplotlib",
    "requests",
    "sentence-transformers",
    "numpy",
    "fastapi",
    "uvicorn[standard]",
    "websockets",
    "python-multipart",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "black",
    "ruff",
    "mypy"
]

[project.scripts]
cni = "cni.cli.main:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
